moviebox_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviebox-deployment
  labels:
    app: moviebox
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moviebox
  template:
    metadata:
      labels:
        app: moviebox
    spec:
      containers:
      - image: node:17
        name: moviebox
        workingDir: /code/moviebox
        command: ['npm', 'start']
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/code"
          name: moviebox-code
      volumes:
      - name: moviebox-code
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: moviebox-service
  namespace: default
spec:
  selector:
    app: moviebox
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: moviebox-route
spec:
  entryPoints: # We listen to requests coming from ports 80 and 443
    - web
    - websecure
  routes:
    - match: Host(`moviebox.home.icebergh.us`)
      kind: Rule
      services:
        - name: moviebox-service # Requests will be forwarded to this service
          port: 3000
  tls:
    secretName: moviebox.home.icebergh.us
